--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -12,6 +12,15 @@
 
     <p>Price: {{ book.price }}</p>
 
+    <div>
+        <h3>Reviews</h3>
+        <ul>
+            {% for review in book.reviews.all %}
+            <li>{{ review.review }} ({{ review.author }})</li>
+            {% endfor %}
+        </ul>
+    </div>
+
 </div>
 
 {% endblock content %}
